--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ version = "0.0.0"
 description = ""
 
 [tool.poetry.dependencies]
-pandas = "*"
-python = "^3.7"
-seaborn = "*"
+pandas = "^2.0"
+python = "^3.9"
+seaborn = "^0.13.0"
+matplotlib = "^3.8.2"
+numpy = "^1.26.2"
